# iotadd-pwo

./: .gitignore  README.md
docker-compose/: docker-compose.yml
hardware-docs/1 - sensors/: README.md
quick-starter/: README.md
read-sensor-python/: waterFlowMeter.py
software/docker-compose/: README.md  docker-compose.broker.yml  docker-compose.yml
software/docker-compose/volumes/api-iota-streams/: Cargo.toml  Dockerfile  Zignar api-iota-streams .postman_collection.json  development.env
software/docker-compose/volumes/api-iota-streams/src/: app_controller.rs  main.rs
software/docker-compose/volumes/api-iota-streams/src/actix_handler/: inject_component.rs  inject_provided.rs  mod.rs  util.rs
software/docker-compose/volumes/api-iota-streams/src/actix_utils/: callback_to_future.rs  deserialize_json_string.rs  mod.rs
software/docker-compose/volumes/api-iota-streams/src/models/: mod.rs
software/docker-compose/volumes/api-iota-streams/src/models/dtos/: create_author_dto.rs  create_subscribe_dto.rs  fetch_all.rs  fetch_all_dto.rs  fetch_prev_msg.rs  mod.rs  send_one_dto.rs
software/docker-compose/volumes/api-iota-streams/src/models/schemas/: author_schema.rs  fetch_prevmsg_schema.rs  mod.rs  subscriptor_schema.rs
software/docker-compose/volumes/api-iota-streams/src/serde_qs_handler/: actix.rs  mod.rs
software/docker-compose/volumes/api-iota-streams/src/streams_utils/: author.rs  mod.rs  random_seed.rs  subscriber.rs
software/microblocks/: README.md
software/node-red/: README.md  flows-broker.json  flows-sht20.json  flows.json
(+46 files in other folders)
